# dplPy

./: .gitignore  3.10-requirements.txt  3.11-requirements.txt  3.12-requirements.txt  404.html  README.md  csv_var.py  dev-instructions.md  emptyjson.json  environment.yml  index.html  mkdocs.yml  pyproject.toml  release-instructions.md  requirements.txt  requirements.yml  runnable_example.ipynb  setup.cfg  setup.py  sitemap.xml  summary.tucson.py  tucson_json.py  tucson_var.py  update.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: create_git_release.yml  pypi_release.yml  run_tests.yml
docs/: csv_var.py
dplpy/: GitHub Copilot  MANIFEST.in  __init__.py  agedepspline.py  autoreg.py  chron.py  chron_stabilized.py  create_json.py  curvefit.py  detrend.py  dplpy.py  emptyjson.json  new.ipynb  output.rwl  plot.py  rbar.py  readers.py  readers_url.py  report.py  series_corr.py  simplesignalfree.py  smoothingspline.py  stats.py  summary.py  tbrm.py  template.py  writers.py  xdate.py
notebooks/: ads_example.ipynb  floating_chronology_example.ipynb  ssf_example.ipynb
search/: search_index.json
src/: __init__.py  __main__.py  autoreg.py  chron.py  chron_stabilized.py  create_json.py  csv_var.py  curvefit.py  dataseries.py  detrend.py  dplpy.py  emdecomp.py  emptyjson.json  new.ipynb  plot.py  pytest.ini  rbar.py  read.py  read_csv.py  read_df.py  read_rwl.py  readers.py  report.py  series_corr.py  setup.py  smoothingspline.py  stats.py  summary.py  summary.tucson.py  summary_tucson.py  tbrm.py  template.py  test.py  test_chron.py  test_xdate.py  testtbrm.py  tucson_json.py  tucson_var.py  work.ipynb  writers.py  (+1 more)
src/readers/: reader_csv.py  reader_csv_1.py  reader_csv_2.py  reader_rwl.py  reader_txt.py
src/unittests/: test_autoreg.py  test_chron.py  test_chron_stabilized.py  test_detrend.py  test_series_corr.py  test_stats.py  test_tbrm.py  test_writers.py
tests/: README.md  ca533.csv  co021.rwl  wa082.csv
tests/data/: test1.txt
tests/data/csv/: TTHH_raw.csv  ca533.csv  ca533_adsR_Pos.csv  ca533_adsR_noPos.csv  co021.csv  wa082.csv
tests/data/rwl/: TWM_TMS.rwl  ca533.rwl  ca667.rwl  cana209.rwl  firth.rwl  (+11 more)
tests/integs/: README.md  test_integ_chron.py  test_integ_detrend.py  test_integ_plots.py  test_integ_readers_and_writers.py  test_integ_statistics.py  test_integ_xdate.py  test_variance_stab.py
tests/unit/: test_autoreg.py  test_chron.py  test_chron_stabilized.py  test_curvefit.py  test_detrend.py  test_readers.py  test_series_corr.py  test_spline.py  test_stats.py  test_summary.py  test_tbrm.py  test_writers.py  test_xdate.py
(+1 files in other folders)
