[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name="dplpy"
version="0.1"
authors=[
    {name='Tyson Lee Swetnam', email='tswetnam@arizona.edu'},
    {name='Ifeoluwa Ale', email='ifeoluwaale@arizona.edu'},
]
license={file='LICENSE'}
requires-python = '>=3.11'
dependencies=[
    "pandas>=2.1.1", 
    "numpy>=1.26.0", 
    "csaps==1.1.0",
    "matplotlib>=3.8.1",
    "statsmodels>=0.14.0",
    "scipy>=1.11.3"
]
