[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name="dplpy"
description="Dendrochronology Program Library for Python"
readme="README.md"
version="0.1.3"
authors=[
    {name='Tyson Lee Swetnam', email='tswetnam@arizona.edu'},
    {name='Ifeoluwa Ale', email='ifeoluwaale@arizona.edu'},
    {name='Kevin Anchukaitis', email='kanchukaitis@arizona.edu'},
]
license={file='LICENSE'}
requires-python = '>=3.10'
dependencies=[
    "numpy>=1.22.4,<2; python_version<'3.11'",
    "numpy>=1.23.2,<2; python_version=='3.11'",
    "numpy>=1.26.0,<2; python_version>='3.12'",
    "pandas>=2.0.0",
    
    "csaps==1.1.0",
    "matplotlib>=3.8.0",
    "statsmodels>=0.13.5; python_version>='3.10'",
    "statsmodels>=0.14.0; python_version>='3.12'",
    "scipy>=1.11.3"
]

[tool.setuptools]
packages = ["dplpy"]
