[metadata]
name = dplpy-opendendro
version = 0.0.1
author = Tyson Lee Swetnam
author_email = tswetnam@arizona.edu
description = The dplPy package
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLv3
license_file = COPYING
platform = any
url = https://github.com/opendendro/dplpy
project_urls =
    Bug Tracker = https://github.com/opendendro/dplpy/issues
    Changelog = https://github.com/opendendro/dplpy/blob/main/CHANGELOG.md
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.4.*, != 3.5.*
packages = {name}
test_suite = tests
setup_requires =
    setuptools
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
